--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,16 @@
 /* ========================================================================================
    General
    ======================================================================================== */
+.is-transitioning {
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.pointer-events-none {
+  pointer-events: none;
+}
 
 /* ========================================================================================
    Project template page
